# ltciit-sec-speaker

./: README.md
ltmain/: CMakeLists.txt  ltmain.c  ltplay.c
ltmain/inc/: dynamic_config.h  ec800g_ota_master.h  led.h  lsm6ds3tr.h  lsm6ds3tr_c_reg.h  lt_fota_http.h  lt_http_demo.h  lt_tts_demo.h  ltadc.h  ltaudio.h  ltaudiourl.h  ltclk_t.h  ltconf.h  ltfm.h  ltfmurl.h  ltkey.h  ltkeydrv.h  ltmain.h  ltmp3.h  ltmqtt.h  ltplay.h  ltpower.h  ltqueue.h  ltrecord.h  ltsdmmc.h  ltsms.h  ltsms_t.h  ltsystem.h  ltuart2frx8016.h  ltvoicecall.h  ltweb_audio.h  volume_knob.h
ltmain/src/dynamic_config/: dynamic_config.c
ltmain/src/ebs/: CMakeLists.txt  ebs.h  lt_datacall.c  lt_datacall.h  lt_ebs.c  lt_ebs.h  ~CMakeLists.txt
ltmain/src/ebs/ebm/: ebm_task_play.c  ebm_task_play.h  ebm_task_schedule.c  ebm_task_schedule.h  ebm_task_type.h
ltmain/src/ebs/param/: ebs_param.c  ebs_param.h
ltmain/src/ebs/player/: lt_http.c  lt_http.h  lt_rtsp.c  lt_rtsp.h  lt_rtsp_play.c  lt_rtsp_play.h  lt_rtspcodes.h  lt_sdp_parse.c  lt_sdp_parse.h  mp3frame.c  mp3frame.h
ltmain/src/ebs/protocol/: ebs_gb_config.h
ltmain/src/ebs/util/: util_circ.c  util_circ.h  util_crc.c  util_crc.h  util_event.c  (+8 more)
ltmain/src/lsm6ds3tr/: lsm6ds3tr.c  lsm6ds3tr_c_reg.c
ltmain/src/ltconfig/: ltconf.c
ltmain/src/ltfm/: fm8035.c  fm8035.h  ltfm.c  ltfmurl.c
ltmain/src/lthttp/: lt_fota_http.c  lt_http_demo.c  lt_http_post.c  lt_http_put.c  lt_https_get.c  readme.md
ltmain/src/ltkey/: ltadc.c  ltkey.c  ltkeydrv.c  ltqueue.c  volume_knob_example.c
ltmain/src/ltled/: led.c
ltmain/src/ltmp3/: ltaudio.c  ltaudiourl.c  ltmp3.c
ltmain/src/ltmqtt/: ltmqtt.c
ltmain/src/ltpower/: ltpower.c
ltmain/src/ltrecord/: ltrecord.c
ltmain/src/ltsdmmc/: ltsdmmc.c
ltmain/src/ltsms/: ltclk_t.c  ltsms.c  ltsms_t.c
ltmain/src/ltsystem/: ltsystem.c
ltmain/src/lttts/: lt_tts_demo.c  lt_tts_demo2.c
ltmain/src/ltuart/: ec800g_ota_master.c  ltuart2frx8016.c
ltmain/src/ltvoicecall/: ltvoicecall.c
ltmain/src/ltwebaudio/: ltweb_audio.c
(+8 files in other folders)
